# ANRO

Lab1/catkin_ws/devel/: setup.sh
Lab1/catkin_ws/devel/share/anro_lab1/cmake/: anro_lab1-msg-paths.cmake
Lab1/catkin_ws/src/beginner_tutorials/: CMakeLists.txt
Lab2/catkin_ws/devel/lib/beginner_tutorials/: add_two_ints_server  turtle
Lab2/catkin_ws/devel/lib/pkgconfig/: Lab2.pc  beginner_tutorials.pc
Lab2/catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-extras.cmake  beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
Lab2/catkin_ws/src/beginner_tutorials/: CMakeLists.txt
Lab2/catkin_ws/src/beginner_tutorials/src/: a.out
Lab2/catkin_ws/src/beginner_tutorials/urdf/: ruchomy.gv  ruchomy.urdf
Lab3/catkin_ws/devel/lib/beginner_tutorials/: DKIN  KDL  KDLDKIN  add_two_ints_client
Lab3/catkin_ws/devel/lib/pkgconfig/: laborka_2.pc  r2d2.pc
Lab3/catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
Lab3/catkin_ws/src/beginner_tutorials/: CMakeLists.txt  urdf.rviz
Lab4/catkin_ws/catkin_ws/devel/: .catkin
Lab4/catkin_ws/catkin_ws/devel/include/beginner_tutorials/: Jint_Control.h  Jint_ControlRequest.h  Jint_ControlResponse.h  Oint_ControlRequest.h  Oint_ControlResponse.h
Lab4/catkin_ws/catkin_ws/devel/lib/beginner_tutorials/: JCMD  JINT  KDLDKIN  OCMD
Lab4/catkin_ws/catkin_ws/src/beginner_tutorials/: CMakeLists.txt
Lab4/catkin_ws/catkin_ws/src/beginner_tutorials/srv/: Jint_Control.srv
Lab5/catkin_ws/devel/: _setup_util.py
Lab5/catkin_ws/devel/include/beginner_tutorials/: Oint_Control.h  oint_point.h  oint_pointRequest.h  oint_pointResponse.h  oint_trajectory.h  oint_trajectoryRequest.h  oint_trajectoryResponse.h
Lab5/catkin_ws/devel/lib/beginner_tutorials/: CMD_IKIN  OINT  OINT_IKIN  ikin  listener  ocmd1  oint1  talker
Lab5/catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc
Lab5/catkin_ws/src/beginner_tutorials/: CMakeLists.txt
Lab5/catkin_ws/src/beginner_tutorials/launch/: JINT_OINT.launch  LAB5.launch
Lab5/catkin_ws/src/beginner_tutorials/src/: CMD_IKIN.cpp  IKIN.cpp  JCMD.cpp  JINT.cpp  OCMD.cpp  OINT.cpp  OINT_IKIN.cpp
Lab5/catkin_ws/src/beginner_tutorials/urdf/: lab5.urdf  ruchomy.urdf
catkin_ws/catkin_ws/devel/: .rosinstall
catkin_ws/catkin_ws/install/: .rosinstall
catkin_ws/catkin_ws/install/include/beginner_tutorials/: AddTwoIntsRequest.h
(+37 files in other folders)
